# PULSE

./: .env.example  .gitattributes  .gitignore  01_DOMAIN_MODEL.md  02_FUNCTIONAL_SPEC.md  03_DATA_MODEL.md  04_API_SPEC.md  05_FRONTEND_ARCHITECTURE.md  06_DESIGN_SYSTEM_SKEUOMORPHIC.md  07_AI_INTEGRATION.md  08_DEPLOYMENT.md  09_DEVELOPMENT_ROADMAP.md  10_CLAUDE_CODE_INSTRUCTIONS.md  CHANGELOG.md  Makefile  README.md  UPDATE-001-pulse-rebrand-ai-features.md  blueprint_konkin_tenayan_2026.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260511_120000_0001_baseline.py  20260512_100000_0002_auth_users_roles.py  20260512_140000_0003_master_data.py  20260513_100000_0004_periode_and_sessions.py  20260513_110000_0005_recommendation_notification.py  20260513_120000_0006_audit_log.py  20260513_130000_0007_nko_snapshot.py  20260513_140000_0008_compliance_tracker.py  20260513_150000_0009_ai_integration.py  20260513_160000_0010_pedoman_chunks.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: ai.py  assessment_session.py  assessment_session_bidang.py  audit_log.py  bidang.py  compliance.py  indikator.py  indikator_applicable_bidang.py  konkin_import_log.py  konkin_template.py  ml_stream.py  nko_snapshot.py  notification.py  periode.py  perspektif.py  recommendation.py  role.py  user.py
backend/app/routers/: __init__.py  ai.py  assessment_session.py  audit_log.py  auth.py  compliance.py  dashboard.py  health.py  master_bidang.py  master_konkin.py  notification.py  periode.py  recommendation.py  reports.py  ws_dashboard.py  ws_notifications.py
backend/app/schemas/: ai.py  assessment.py  audit.py  auth.py  compliance.py  dashboard.py  master.py  notification.py  periode.py  recommendation.py  user.py
backend/app/seed/: __init__.py  __main__.py  admin_user.py  bidang.py  hcr_ocr.py  indikator_applicability.py  konkin_2026.py  pedoman_chunks.py  stream_coverage.py  subindikator_coverage.py
backend/app/services/: ai_features.py  audit_immediate.py  audit_middleware.py  carry_over.py  compliance_summary.py  dashboard_broadcast.py  excel_import.py  nko_calculator.py  notification_dispatcher.py  openrouter_client.py  pedoman_ai.py  pencapaian.py  periode_fsm.py  pii_masking.py  recommendation_create.py  recommendation_fsm.py  refresh_tokens.py  report_exports.py  session_creator.py  ws_manager.py
backend/tests/: conftest.py  test_ai_phase5.py  test_audit_log_router.py  test_audit_middleware.py  test_auth.py  test_bidang.py  test_bootstrap.py  test_compliance_summary.py  test_health.py  test_master_konkin.py  test_ml_stream.py  test_nko_calculator.py  test_no_upload_policy.py  test_notification_dispatcher.py  test_phase2_migrations.py  test_phase2_models_import.py  test_phase2_services_and_routes.py  test_rbac.py  test_report_exports.py  test_seed_idempotency.py  test_user_roles.py  test_ws_notifications.py
scripts/: dev.sh  (+7 more)
(+186 files in other folders)
